add backround image

--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,7 @@ cdata {
     text-transform: uppercase;
     display: inline-block;
     letter-spacing: 2px;
-    background-color: #ffbf00;
+    background-color:aquamarine;
     outline: none;
     padding: 12.5px 13px;
     border: none;
@@ -79,4 +79,49 @@ h4 {
 #order-pizza {
     padding: 20px 50px 20px 50px;
     font-family: 'Love Ya Like A Sister', cursive;
+}
+.order-overlay {
+    height: inherit;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.9);
+    border-radius: 20px;
+}
+
+.checkout {
+    border-radius: 20px;
+    margin-top: 20px;
+}
+
+#list {
+    color: #000;
+}
+.pizz {
+    color: rgb(16, 135, 190);
+}
+
+.menu {
+    margin-top: 30px;
+    background-image: url("..img/p.png");
+    padding: 0;
+}
+
+#menu {
+    font-family: 'Love Ya Like A Sister', cursive;
+}
+#menu {
+    font-family: 'Love Ya Like A Sister', cursive;
+}
+
+.menu-overlay {
+    height: inherit;
+    width: inherit;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+
+.landing {
+    background-image: url("../img/p.png");
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
 }
