--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,39 @@
+* {
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+}
+
 body {
     margin: 0;
     padding: 0;
-    color: #cf5858;
+    overflow-x: hidden;
+    color: #ffffff;
 }
-figcaption {
-    font-family: 'Oswald', serif;
-    text-decoration-color:rgb(212, 104, 104);
+
+#spantext {
+    color: yellow;
 }
+
+.navi {
+    float: right;
+}
+
+.exc {
+    color: yellow;
+}
+
+#piz-pap {
+    font-family: 'Shadows Into Light', cursive;
+    font-size: 35px;
+    font-weight: normal;
+    color: darkorange;
+}
+
+li {
+    display: inline;
+    margin-right: 20px;
+}
+
 .h-buttons {
     margin-top: 90px;
     margin-bottom: 100px;
@@ -16,6 +43,17 @@ figcaption {
     border-radius: 40px;
     color: black;
 }
+
+.menu-btn {
+    border-radius: 20px;
+    margin-top: 20px;
+    color: #000;
+}
+
+figcaption {
+    font-family: 'Oswald', serif;
+}
+
 #menu {
     padding-top: 20px;
 }
@@ -28,6 +66,33 @@ figcaption {
     font-size: 24px;
     font-family: system-ui, serif;
 }
+
+.order-summary h1, .summary, .contact {
+    color: #000;
+    font-family: 'Love Ya Like A Sister', cursive;
+    margin-top: 30px;
+}
+
+.contacts {
+    background-image: url("../images/sec/b1.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.contact-overlay {
+    height: inherit;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+input[type="email"] {
+    background: transparent;
+    border: 1px solid #ffffff;
+    padding: .8em .7em;
+    border-radius: 20px;
+    outline: none !important;
+    font-size: 14px;
+}
+
 .click-me {
     margin-top: 20px;
     margin-bottom: 20px;
@@ -36,7 +101,12 @@ figcaption {
 .get-pizza {
     margin-top: 40px;
 }
-cdata {
+
+.contact {
+    padding-top: 20px;
+}
+
+.cdata {
     margin-top: 20px;
     margin-bottom: 15px;
 }
@@ -57,14 +127,14 @@ cdata {
     text-transform: uppercase;
     display: inline-block;
     letter-spacing: 2px;
-    background-color:aquamarine;
+    background-color: #ffbf00;
     outline: none;
     padding: 12.5px 13px;
     border: none;
     border-radius: 33px;
     font-size: 14px;
-
 }
+
 .deliver, .delivernot {
     margin: 10px;
 }
@@ -80,6 +150,7 @@ h4 {
     padding: 20px 50px 20px 50px;
     font-family: 'Love Ya Like A Sister', cursive;
 }
+
 .order-overlay {
     height: inherit;
     padding: 20px;
@@ -95,19 +166,17 @@ h4 {
 #list {
     color: #000;
 }
+
 .pizz {
-    color: rgb(16, 135, 190);
+    color: lawngreen;
 }
 
 .menu {
     margin-top: 30px;
-    background-image: url("..img/p.png");
+    background-image: url("../images/sec/b4.jpg");
     padding: 0;
 }
 
-#menu {
-    font-family: 'Love Ya Like A Sister', cursive;
-}
 #menu {
     font-family: 'Love Ya Like A Sister', cursive;
 }
@@ -118,10 +187,160 @@ h4 {
     background-color: rgba(0, 0, 0, 0.7);
 }
 
-
+/*Background pic*/
 .landing {
-    background-image: url("../img/p.png");
+    background-image: url("../images/pizzabg.jpeg");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
+}
+
+.overlay {
+    background-color: rgba(0, 0, 0, 0.7);
+    height: 100%;
+}
+
+#push {
+    padding-top: 10%;
+}
+
+.landing-text {
+    margin-top: 10%;
+}
+
+.landing-text h1, h2 {
+    font-family: 'Love Ya Like A Sister', cursive;
+}
+
+.landing-text h1 {
+    font-family: 'Gloria Hallelujah', cursive;
+    font-size: 60px;
+}
+
+
+a {
+    color: white;
+    font-size: 18px;
+    font-weight: normal;
+}
+
+figure img {
+    height: 260px;
+    width: 260px;
+}
+
+.karibu-txt {
+    margin-top: 160px;
+}
+
+.txt {
+    font-family: system-ui, cursive;
+    color: black;
+    font-size: 23px;
+}
+
+.txt-big {
+    font-size: 50px;
+    font-family: 'Shadows Into Light', cursive;
+}
+
+.karibu-img {
+    margin-top: 10px;
+    margin-left: 80px;
+    margin-bottom: 130px;
+    height: 400px;
+    width: 400px;
+}
+
+.welcome {
+    padding-top: 30px;
+}
+
+.rads {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.fab {
+    margin: 60px 15px 0 15px;
+}
+
+/* Collapse nav start*/
+.top-nav-collapse {
+    background-color: #3f51b5 !important;
+}
+
+.navbar:not(.top-nav-collapse) {
+    background: transparent !important;
+}
+
+/* Collapse nav end*/
+
+
+/** Media Queries start **/
+
+@media (max-width: 740px) {
+    html,
+    body,
+    header,
+    .view {
+        height: 1000px;
+        overflow-x: hidden;
+    }
+
+    #push {
+        padding-top: 40%;
+    }
+
+    .karibu-txt {
+        margin-top: 50px;
+    }
+
+    .menu-overlay {
+        width: 100%;
+        height: inherit;
+        background-color: rgba(0, 0, 0, 0.7);
+    }
+
+    .karibu-img {
+        margin-left: 20px;
+        margin-bottom: 10px;
+        height: 300px;
+        width: 270px;
+    }
+
+    .welcome {
+        padding-top: 10px;
+    }
+
+    .cdata {
+        padding: 10px 5px 10px 5px;
+    }
+
+}
+
+@media (min-width: 800px) and (max-width: 850px) {
+    html,
+    body,
+    header,
+    .view {
+        height: 650px;
+    }
+
+    .piz-pap {
+        font-size: 50px;
+    }
+
+    ul > .nav-items {
+        display: inline;
+        margin-right: 20px;
+        margin-left: 12px;
+    }
+}
+
+@media (max-width: 991px) {
+    .navbar:not(.top-nav-collapse) {
+        background: #3f51b5 !important;
+    }
+
 }
