--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ body {
 }
 
 #spantext {
-    color: yellow;
+    color: green;
 }
 
 .navi {
@@ -19,14 +19,14 @@ body {
 }
 
 .exc {
-    color: yellow;
+    color: rgb(7, 7, 4);
 }
 
 #piz-pap {
     font-family: 'Shadows Into Light', cursive;
     font-size: 35px;
     font-weight: normal;
-    color: darkorange;
+    color: green;
 }
 
 li {
@@ -127,7 +127,7 @@ input[type="email"] {
     text-transform: uppercase;
     display: inline-block;
     letter-spacing: 2px;
-    background-color: #ffbf00;
+    background-color:green;
     outline: none;
     padding: 12.5px 13px;
     border: none;
@@ -168,12 +168,12 @@ h4 {
 }
 
 .pizz {
-    color: lawngreen;
+    color: green;
 }
 
 .menu {
     margin-top: 30px;
-    background-image: url("../images/sec/b4.jpg");
+    background-image: url("../img/pizzab.png");
     padding: 0;
 }
 
@@ -187,7 +187,7 @@ h4 {
     background-color: rgba(0, 0, 0, 0.7);
 }
 
-/*Background pic*/
+
 .landing {
     background-image: url("../images/pizzabg.jpeg");
     background-size: cover;
@@ -265,19 +265,20 @@ figure img {
     margin: 60px 15px 0 15px;
 }
 
-/* Collapse nav start*/
+
 .top-nav-collapse {
-    background-color: #3f51b5 !important;
+    background-color: green !important;
+}
+.row{
+    background-image: url("../images/pizzabg.jpeg");
 }
 
 .navbar:not(.top-nav-collapse) {
     background: transparent !important;
 }
 
-/* Collapse nav end*/
 
 
-/** Media Queries start **/
 
 @media (max-width: 740px) {
     html,
@@ -340,7 +341,7 @@ figure img {
 
 @media (max-width: 991px) {
     .navbar:not(.top-nav-collapse) {
-        background: #3f51b5 !important;
+        background: green !important;
     }
 
 }
