--- a/css/styles.css
+++ b/css/styles.css
@@ -14,8 +14,8 @@ body {
     color: green;
 }
 
-.navi {
-    float: right;
+.nav {
+    float: center;
 }
 
 .exc {
@@ -23,6 +23,8 @@ body {
 }
 
 #piz-pap {
+    margin-left: 600px;
+    align-content: center;
     font-family: 'Shadows Into Light', cursive;
     font-size: 35px;
     font-weight: normal;
@@ -262,12 +264,7 @@ figure img {
 .top-nav-collapse {
     background-color: green !important;
 }
-.row{
-    /*background-image: url("../img/image.jpeg");**/
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-}
+
 
 .navbar:not(.top-nav-collapse) {
     background: transparent !important;
