--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ figcaption {
 
 .order-summary h1, .summary, .contact {
     color: #000;
-    font-family: 'Love Ya Like A Sister', cursive;
+    font-family: 'Love Ya Like A Sister', serif;
     margin-top: 30px;
 }
 
